--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'CET'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: http://greg.jeanmart.me
+url: https://greg.jeanmart.me
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
