--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -19,17 +19,16 @@ nav:
   Guides: /guides/
   About me: /about/
 
-
 # Links to your social media accounts.
 # The keys should correspond to Fontawesome icon names
 # (see https://fontawesome.com/icons?d=gallery&s=brands);
 # only 'mail' is an exception.
 social_links:
-  twitter: https://twitter.com/GregJeanmart
+  twitter: https://twitter.com/gr3g_0_0
   github: https://github.com/gjeanmart
-  stack-overflow: https://stackexchange.com/users/5168165/gjeanmart?tab=accounts
+  stack-overflow: https://ethereum.stackexchange.com/users/4108/gr3g
   linkedin: https://www.linkedin.com/in/gjeanmart/
-  mail: mailto:greg@jeanmart.me
+  mail: mailto:contact@gr3g.tech
 
 # Customize the overview with displaying a tagcloud on the index page.
 # Options: https://hexo.io/docs/helpers.html#tagcloud
@@ -117,7 +116,6 @@ colorscheme: dark
 # Maximal width of the page in rem units.
 page_width: 48
 
-
 ##############################################################################
 # Miscellaneous
 ##############################################################################
@@ -131,7 +129,6 @@ open_graph:
   fb_admins:
   twitter_id:
   google_plus:
-
 
 ##############################################################################
 # Plugins
